# bazel_builder

./: CHANGELOG.md  README.md  pubspec.yaml
example/native_add_bazel/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  pubspec.yaml
example/native_add_bazel/android/app/: build.gradle
example/native_add_bazel/android/app/src/main/: AndroidManifest.xml
example/native_add_bazel/android/app/src/main/kotlin/com/example/native_add_bazel/: MainActivity.kt
example/native_add_bazel/ios/: Podfile
example/native_add_bazel/ios/Runner/: Info.plist
example/native_add_bazel/ios/Runner.xcodeproj/: project.pbxproj
example/native_add_bazel/lib/: dynamic_libs.dart  main.dart
example/native_add_bazel/lib/native_add/: native_add.dart  native_add_bindings.dart
example/native_add_bazel/linux/: CMakeLists.txt  my_application.cc
example/native_add_bazel/macos/: Podfile
example/native_add_bazel/macos/Runner.xcodeproj/: project.pbxproj
example/native_add_bazel/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/native_add_bazel/macos/Runner/Configs/: AppInfo.xcconfig
example/native_add_bazel/src/: BUILD.bazel  native_add.cpp  native_add.h  symbols.exp
example/native_add_bazel/test/: widget_test.dart
example/native_add_bazel/web/: index.html  manifest.json
example/native_add_bazel/windows/: CMakeLists.txt
example/native_add_bazel/windows/runner/: Runner.rc  main.cpp
lib/src/: configuration_parser.dart  generators.dart  structures.dart  structures.freezed.dart  structures.g.dart  tools.dart
